# chat

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MVP.md  Makefile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  setup.sh  src.txt  stop.sh  test_basic.py  test_database_refactor.py  test_playbook.yml  tox.ini
ansible/: README.md  ansible.cfg  site.yml
ansible/group_vars/: all.yml
ansible/roles/database/tasks/: main.yml
ansible/roles/database/templates/: schema.sql.j2
ansible/roles/database/vars/: main.yml
ansible/roles/webserver/handlers/: main.yml
ansible/roles/webserver/tasks/: main.yml
ansible/roles/webserver/templates/: index.html.j2  nginx.conf.j2
ansible/roles/webserver/vars/: main.yml
app/: Dockerfile  api.py  main.py  requirements.txt
app/api/: __init__.py  dependencies.py  main.py  models.py
app/api/routers/: __init__.py  chat_router.py  cv_router.py  form_router.py  gdpr_router.py  health_router.py  job_router.py
app/core/: __init__.py  automation_engine.py  automation_worker.py  chat_interface.py  connection.py  cv_processor.py  cv_processor_fixed.py  form_detector.py  models.py  notification_service.py
app/core/cv_processing/: __init__.py  extractors.py  file_utils.py  llm_processors.py  processor.py
app/core/form_detection/: __init__.py  automation.py  detector.py  models.py
app/database/: __init__.py  application_operations.py  audit_operations.py  candidate_operations.py  connection.py  core.py  job_operations.py  models.py  notification_operations.py
app/utils/: __init__.py  gdpr_compliance.py  helpers.py
cleanup/: Dockerfile  daily_cleanup.py  requirements.txt
cleanup/scripts/: __init__.py  maintenance.py
data/: api_test_requests.json  job_listings.json  notification_templates_data.json  performance_test_data.json  test_candidates.json
docextract/: __init__.py  setup.py
docextract/api/: main.py
docextract/cli/: main.py
docextract/core/: __init__.py  extractor.py  processor.py
docextract/utils/: config.py
docs/: API.md  DEPLOYMENT.md  STRATEGY.md
monitoring/: alert_rules.yml  alertmanager.yml  docker-compose.monitoring.yml  loki-config.yml  prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
nginx/: nginx.conf
scripts/: backup.sh  convert_cv.py  deploy.sh  init.sql  logs.sh  quick_setup.sh  stop.sh
templates/chat_templates/: welcome_message.txt
templates/email_templates/: candidate_notification.html  employer_notification.html  reminder_notification.html
test/: cv.md  integration_test_data.json
test-docker/: Dockerfile  coboarding-test.Dockerfile  test.py
tests/: conftest.py  test_cv_processor.py  test_upload.py
tests/unit/app/: __init__.py
tests/unit/app/core/: __init__.py  test_cv_processor.py
tests/unit/app/utils/: __init__.py
tests/unit/worker/: __init__.py
tests/unit/worker/core/: __init__.py
tests/unit/worker/utils/: __init__.py
worker/: Dockerfile  requirements.txt  worker.py
worker/core/: __init__.py
worker/utils/: helper.py
