[metadata]
description-file = README.md
license_files = LICENSE

[coverage:run]
omit = 
    */tests/*
    */__main__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
    if TYPE_CHECKING:

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,.venv,venv,build,dist,.mypy_cache,.pytest_cache
per-file-ignores =
    # Allow star imports in __init__.py
    __init__.py: F403,F401
    # Allow non-abstract empty methods in abstract base classes
    */base.py: B027
    # Allow unused variables in tests
    tests/*.py: F841

[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["**/migrations/*"]


